--- a/yuntao-manager-core/src/main/webapp/resources/lib/layuiadmin/tpl/system/about.html
+++ b/yuntao-manager-core/src/main/webapp/resources/lib/layuiadmin/tpl/system/about.html
@@ -7,6 +7,7 @@
     <p>Spring 4.3.18.RELEASE</p>
     <p>Spring MVC 4.3.18.RELEASE</p>
     <p>Mybatis 3.4.6</p>
+	<p>layui 2.4.3</p>
   </script>
   <!-- <div class="layui-btn-container">
     <a href="javascript:;" target="_blank" class="layui-btn layui-btn-danger">联系我们</a>
